--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -42,7 +42,7 @@
 }
 
 .text_title {
-  width: 300px;
+  width: 100%;
   height: 33px;
   display: block;
   font-size: 18px;
@@ -50,7 +50,7 @@
 }
 
 .text_price {
-  width: 300px;
+  width: 100%;
   height: 33px;
   display: block;
   font-size: 16px;
@@ -58,11 +58,12 @@
 }
 
 .text_detail {
-  width: 300px;
+  width: 100%;
   height: 33px;
   display: block;
   font-size: 16px;
   font-weight: 400;
+  text-overflow: ellipsis;
 }
 
 html, body {
@@ -884,13 +885,8 @@ html, body {
 }
 #bestBox {
   width: 100%;
-  height: 600px;
-  margin-top: 20px;
-  padding: 40px;
 }
 .best_area {
-  overflow: hidden;
-  width: 78.125vw;
   height: 420px;
   margin: auto;
 }
@@ -918,6 +914,194 @@ html, body {
   height: 100px;
   padding: 0 10px;
   /* background-color: var(--color-sample1); */
+}
+
+@media all and (max-width: 1279px) {
+  #bestBox {
+    overflow: hidden;
+    width: 100%;
+    height: 480px;
+    margin-top: 20px;
+    padding: 40px;
+  }
+  .best_area {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    width: auto;
+    height: 420px;
+    margin: auto;
+    margin-top: 40px;
+  }
+  .best_area .best_item {
+    width: 140px;
+    height: 240px;
+    margin-left: 20px;
+  }
+  .best_area .best_item a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .best_area .best_item a .best_img {
+    width: 140px;
+    height: 140px;
+  }
+  .best_area .best_item a .best_text {
+    width: 140px;
+  }
+}
+@media all and (min-width: 1280px) {
+  #bestBox {
+    width: 100%;
+    height: 600px;
+    margin-top: 20px;
+    padding: 40px;
+  }
+  .best_area {
+    overflow: hidden;
+    width: 78.125vw;
+    height: 420px;
+    margin: auto;
+  }
+  .best_area .best_item {
+    float: left;
+    width: 320px;
+    height: 420px;
+    margin-left: 20px;
+  }
+  .best_area .best_item:first-child {
+    margin-left: 0;
+  }
+  .best_area .best_item a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .best_area .best_item a .best_img {
+    width: 320px;
+    height: 320px;
+    background-color: rgba(127, 98, 255, 0.5);
+  }
+  .best_area .best_item a .best_text {
+    width: 320px;
+    height: 100px;
+    padding: 0 10px;
+    /* background-color: var(--color-sample1); */
+  }
+}
+@media all and (max-width: 1279px) {
+  .title_all {
+    display: none;
+  }
+}
+#benefitBox {
+  width: 100%;
+  height: 500px;
+  margin-top: 20px;
+  padding: 80px;
+  background-color: #FFF1E0;
+}
+.benefit_title_area {
+  width: 280px;
+  height: 100px;
+  margin: auto;
+  margin-bottom: 60px;
+}
+.benefit_title_area .benefit_title {
+  width: 280px;
+  height: 60px;
+  margin: auto;
+  border-radius: 30px;
+  background-color: #E17900;
+  text-align: center;
+  line-height: 60px;
+  font-size: 36px;
+  font-weight: 700;
+  color: #fff;
+}
+.benefit_title_area .benefit_title_detail {
+  width: 260px;
+  height: 20px;
+  margin: auto;
+  margin-top: 16px;
+  text-align: center;
+  line-height: 20px;
+}
+
+.benefit_detail_area {
+  display: flex;
+  justify-content: space-between;
+  width: 910px;
+  height: 170px;
+  margin: auto;
+}
+.benefit_detail_area .benefit {
+  width: 270px;
+  height: 170px;
+  margin: auto;
+  margin-top: 15px;
+  text-align: center;
+  font-size: 20px;
+}
+.benefit_detail_area .benefit .benefit_img {
+  width: 75px;
+  height: 75px;
+  margin: auto;
+  margin-bottom: 20px;
+  background-color: #E17900;
+  border-radius: 100%;
+}
+.benefit_detail_area .benefit .benefit_img_coupon {
+  background-image: url(../../img/wallet.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 70% auto;
+}
+.benefit_detail_area .benefit .benefit_img_coupon > span {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+.benefit_detail_area .benefit .benefit_img_review {
+  background-image: url(../../img/coin.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 70% auto;
+}
+.benefit_detail_area .benefit .benefit_img_review > span {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+.benefit_detail_area .benefit .benefit_img_friend {
+  background-image: url(../../img/hands.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 70% auto;
+}
+.benefit_detail_area .benefit .benefit_img_friend > span {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+.benefit_detail_area .benefit .benefit_text {
+  font-size: 20px;
+}
+.benefit_detail_area .benefit .benefit_bold {
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=main_v2.css.map */
