--- a/study_code/a_project/scss/src/main/_main_common.scss
+++ b/study_code/a_project/scss/src/main/_main_common.scss
@@ -34,18 +34,19 @@
 }
 
 .text_title {
-  width: 300px; height: 33px;
+  width: 100%; height: 33px;
   display: block;
   font-size: 18px; font-weight: 400;
 }
 .text_price {
-  width: 300px; height: 33px;
+  width: 100%; height: 33px;
   display: block;
   font-size: 16px; font-weight: 700;
 }
 .text_detail {
-  width: 300px; height: 33px;
+  width: 100%; height: 33px;
   display: block;
   font-size: 16px; font-weight: 400;
+  text-overflow: ellipsis;
 }
 
