[add] main-challenge 반응형

--- a/study_code/a_project/scss/src/main/_main_benefitBox.scss
+++ b/study_code/a_project/scss/src/main/_main_benefitBox.scss
@@ -50,5 +50,5 @@
   } // .benefit_detail_area
 } // #benefitBox
 
-@import './main_benefit_handhelds';
-@import './main_benefit_pc';
+@import './main_benefitBox_handhelds';
+@import './main_benefitBox_pc';
