--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -1182,6 +1182,31 @@ html, body {
     height: 170px;
   }
 }
+#challengeBox {
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+  padding: 40px;
+}
+#challengeBox .challenge_area {
+  display: flex;
+  justify-content: space-between;
+  width: 78.125vw;
+  height: 32.8125vw;
+  margin: auto;
+}
+.challenge {
+  width: 35.15625vw;
+  height: 100%;
+  margin: auto;
+  background-color: #eee;
+}
+.challenge a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 @media all and (max-width: 1279px) {
   .title_all {
     display: none;
