--- a/study_code/a_project/scss/common/_variable.scss
+++ b/study_code/a_project/scss/common/_variable.scss
@@ -49,3 +49,5 @@ $pc:1440px;
 // #view ===============================
 $view_len: 5;
 
+// #event ==============================
+$event_height: calc(30vw + 80px);
