--- a/study_code/a_project/scss/src/main/_main_common.scss
+++ b/study_code/a_project/scss/src/main/_main_common.scss
@@ -2,7 +2,7 @@
 
 
 .title_area {
-  width: 78.125vw; height: 60px;
+  width: 100%; height: 60px;
   margin: auto;
   margin-bottom: 20px;
   /* background-color: var(--color-sample1); */
