--- a/study_code/a_project/scss/src/main_v2.scss
+++ b/study_code/a_project/scss/src/main_v2.scss
@@ -23,6 +23,7 @@ html, body { color: #171717; font-weight: 400;}
 @import './main/main_benefitBox';
 @import './main/main_challengeBox';
 @import './main/main_event';
+@import './main/main_awards';
 
 /*
 // ~1279px ------------------------------------------------------
