--- a/study_code/a_project/scss/src/main/_main_awards.scss
+++ b/study_code/a_project/scss/src/main/_main_awards.scss
@@ -6,6 +6,7 @@
   margin-top: 20px;
   background-color: #FFF1E0;
   padding-top: 80px;
+  overflow: hidden;
 
   .awards_title {
     width: 280px; height: 60px;
