--- a/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
@@ -8,6 +8,8 @@
     @at-root .awards_area {
       height: auto;
 
+      .awards_btn > div { margin-bottom: -35px;}
+
       .awards_indicator { display: none; }
 
       @at-root .awards_main {
