--- a/study_code/a_project/scss/src/main_v2.scss
+++ b/study_code/a_project/scss/src/main_v2.scss
@@ -24,6 +24,8 @@ html, body { color: #171717; font-weight: 400;}
 @import './main/main_challengeBox';
 @import './main/main_event';
 @import './main/main_awards';
+@import './main/main_saleBox';
+@import './main/main_magazineBox';
 
 /*
 // ~1279px ------------------------------------------------------
