--- a/study_code/a_project/scss/common/_headBox.scss
+++ b/study_code/a_project/scss/common/_headBox.scss
@@ -6,15 +6,19 @@
 #headBox {
   position: fixed; top: 0; left: 0; right: 0; z-index: 100;
   display: flex; justify-content: space-between; align-items: flex-end;
-  width: 100%; height: 150px;
-  padding: 30px 100px;
+  width: 100%;
   background-color: rgba($color_white, 0.8);
   
 } // #headBox
-// ~1279px
+
+// ~1279px ----------------------------------------------------------------------------
 @media all and (max-width: 1279px) {
+  #headBox {
+    height: 19.5vw; max-height: 150px;
+    padding: 3.9vw 10vw;
+  }
   @at-root h1 {
-    width: 170px; height: 40px;
+    width: 22.1vw; max-width: 170px; height: 5.2vw; max-height: 40px;
     // margin-top: 30px;
     a{ 
       @include full;
@@ -28,12 +32,17 @@
   #hand_nav { 
     display: block;
     display: flex; justify-content: space-between;
-    width: 230px; height: 40px;
+    width: 30vw; max-width: 230px; height: auto;
     // margin-top: 40px;
+
+    button {
+      width: 5.2vw; max-width: 40px; height: 5.2vw; max-height: 40px;
+    }
 
     @at-root .hand_language {
       position: relative;
-      width: 40px; height: 40px;
+      width: 5.2vw; max-width: 40px; height: 5.2vw; max-height: 40px;
+      cursor: pointer;
       @include img('global_1.png');
       ul {
         display: none;
@@ -51,16 +60,14 @@
       &:hover ul { display: block;}
       &:focus ul { display: block;}
     } // .hand_language
+
     .hand_search {
-      width: 40px; height: 40px;
       @include img('search.png');
     }
     .hand_cart {
-      width: 40px; height: 40px;
       @include img('cart.png');
     }
     .hand_menu {
-      width: 40px; height: 40px;
       @include img('menu.png');
     }
   }
@@ -68,6 +75,10 @@
 
 // 1280px ~ ----------------------------------------------------------------
 @media all and (min-width: 1280px) {
+  #headBox {
+    height: 150px;
+    padding: 30px 100px;
+  }
   @at-root h1 {
     width: 170px; height: 60px;
     // margin-top: 30px;
@@ -91,6 +102,11 @@
       width: auto;
       text-align: center; line-height: 40px;
       font-size: 18px;
+
+      a {
+        @include full;
+        // &:hover { outline: none; border-bottom: 1px solid #171717;}
+      }
     }
   } // #gnb
 
