--- a/study_code/a_project/scss/src/main/_main_bestBox_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_bestBox_pc.scss
@@ -10,7 +10,8 @@
     @at-root .best_area {
       display: flex; justify-content: space-between; flex-wrap: nowrap;
       overflow: hidden;
-      width: 78.125vw; height: 420px;
+      // width: 78.125vw; 
+      width: 100%; height: 420px;
       margin: auto;
   
       .best_item {
