--- a/study_code/a_project/scss/src/main/_main_event_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_event_pc.scss
@@ -7,7 +7,7 @@
 
     .event_area {
       flex-wrap: nowrap;
-      width: 78.125vw; height: 420px;
+      width: 100%; height: 420px;
 
       @at-root .event {
         width: 320px; height: 100%;
