--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -9,7 +9,8 @@
 
 .title_text {
   float: left;
-  width: 500px;
+  width: 65vw;
+  max-width: 500px;
   height: 60px;
 }
 
@@ -24,7 +25,8 @@
 }
 
 .sub_title {
-  width: 450px;
+  width: 65vw;
+  max-width: 500px;
   height: 20px;
   font-size: 16px;
   font-weight: 400;
@@ -97,8 +99,10 @@ html, body {
   }
 
   h1 {
+    min-width: 100px;
     width: 22.1vw;
     max-width: 170px;
+    min-height: 20px;
     height: 5.2vw;
     max-height: 40px;
   }
@@ -129,20 +133,25 @@ html, body {
     display: block;
     display: flex;
     justify-content: space-between;
+    min-width: 150px;
     width: 30vw;
     max-width: 230px;
     height: auto;
   }
   #hand_nav button {
+    min-width: 25px;
     width: 5.2vw;
     max-width: 40px;
+    min-height: 25px;
     height: 5.2vw;
     max-height: 40px;
   }
   .hand_language {
     position: relative;
+    min-width: 25px;
     width: 5.2vw;
     max-width: 40px;
+    min-height: 25px;
     height: 5.2vw;
     max-height: 40px;
     cursor: pointer;
@@ -450,7 +459,7 @@ html, body {
   #footBox {
     width: 100%;
     height: 400px;
-    padding: 70px 60px;
+    padding: 7.8125vw;
     background-color: #1c1c1c;
   }
 
@@ -481,8 +490,9 @@ html, body {
   .foot_top_area .foot_top_btn {
     display: flex;
     justify-content: space-between;
-    width: 300px;
-    height: 30px;
+    max-width: 300px;
+    height: auto;
+    max-height: 30px;
     margin: auto;
     font-size: 16px;
     text-align: left;
@@ -671,8 +681,8 @@ html, body {
   }
   .foot_main_area .foot_main_btn li {
     position: relative;
-    margin-right: 10px;
-    padding-right: 15px;
+    margin-right: 0px;
+    padding-right: 30px;
   }
   .foot_main_area .foot_main_btn li:last-child {
     margin-right: 0;
@@ -682,7 +692,7 @@ html, body {
     content: "";
     display: block;
     position: absolute;
-    top: 50%;
+    top: calc(50% - 5px);
     right: 0;
     width: 3px;
     height: 3px;
@@ -762,125 +772,416 @@ html, body {
     overflow: hidden;
   }
 }
-#eventBox {
-  width: 100%;
-  height: auto;
-  margin-top: 150px;
-}
-#eventBox .event_total_title {
-  width: 100%;
-  height: 100px;
-  margin-bottom: 50px;
-}
-#eventBox .event_total_title h2 {
-  margin-left: 100px;
-  font-size: 36px;
-  font-weight: 700;
-  text-align: left;
-  line-height: 100px;
-  text-transform: uppercase;
-}
-.event_area {
-  position: relative;
-  width: 1200px;
-  height: auto;
-  min-height: 1300px;
-  margin: auto;
-  padding: 30px 60px;
-}
-.event_area .event_tab {
-  width: 1080px;
-  height: 40px;
-  margin: 0 auto;
-  padding: 0;
-  border-bottom: 1px solid #333;
-}
-.event_area .event_tab li {
-  float: left;
-  margin: 3px 20px 20px 0;
-  padding: 0 10px;
-  padding-bottom: 11px;
-}
-.event_area .event_tab li.on {
-  border-bottom: 3px solid #171717;
-}
-.event_area .event_tab li.on button {
-  font-weight: 700;
-}
-.tab_content {
-  width: 1080px;
-  height: auto;
-  min-height: 820px;
-  margin: auto;
-  margin-top: 50px;
-}
-.tab_content .event_ing_wrap {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 100%;
-  height: auto;
-}
-.event {
-  position: relative;
-  width: 300px;
-  height: 380px;
-  margin-right: 90px;
-  margin-bottom: 60px;
-}
-.event:nth-child(3n) {
-  margin-right: 0;
-}
-.event .event_img {
-  width: 100%;
-  height: 300px;
-  background-color: #eee;
-}
-.event .event_title {
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-}
-.event .event_date {
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-}
-.event .event_hover {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  text-align: center;
-  line-height: 380px;
-  color: #fff;
-  text-decoration: underline;
-  font-size: 22px;
-}
-.event:hover .event_hover {
-  display: block;
-}
-.event > a:focus .event_hover {
-  display: block;
-  border: 2px solid #171717;
-}
+@media all and (max-width: 767px) {
+  #eventBox {
+    width: 100%;
+    height: auto;
+    margin-top: 150px;
+  }
+  #eventBox .event_total_title {
+    width: 200px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  #eventBox .event_total_title h2 {
+    width: 100%;
+    height: 100%;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 100px;
+    text-transform: uppercase;
+  }
+  .event_area {
+    position: relative;
+    width: 93.75vw;
+    height: auto;
+    min-height: 1300px;
+    margin: auto;
+    padding: 30px 0;
+  }
+  .event_area .event_tab {
+    width: 84.375vw;
+    max-width: 1200px;
+    height: 40px;
+    margin: 0 auto;
+    padding: 0;
+    border-bottom: 1px solid #333;
+  }
+  .event_area .event_tab li {
+    float: left;
+    margin: 3px 20px 20px 0;
+    padding: 0 10px;
+    padding-bottom: 11px;
+  }
+  .event_area .event_tab li.on {
+    border-bottom: 3px solid #171717;
+  }
+  .event_area .event_tab li.on button {
+    font-weight: 700;
+  }
+  .tab_content {
+    width: 84.735vw;
+    height: auto;
+    min-height: 820px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 200px;
+  }
+  .tab_content .event_ing_wrap {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+  }
+  .event {
+    position: relative;
+    width: 300px;
+    height: 380px;
+    margin: auto;
+    margin-bottom: 60px;
+  }
+  .event .event_img {
+    width: 100%;
+    height: 300px;
+    background-color: #eee;
+  }
+  .event .event_title {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+  }
+  .event .event_date {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+  }
+  .event .event_hover {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    text-align: center;
+    line-height: 380px;
+    color: #fff;
+    text-decoration: underline;
+    font-size: 22px;
+  }
+  .event:hover .event_hover {
+    display: block;
+  }
+  .event > a:focus .event_hover {
+    display: block;
+    border: 2px solid #171717;
+  }
 
-.event_area .event_more {
-  position: absolute;
-  bottom: 110px;
-  left: 50%;
-  width: 300px;
-  height: 60px;
-  margin-left: -150px;
-  border-radius: 10px;
-  font-size: 18px;
-  line-height: 60px;
-  color: #fff;
-  background-color: #333;
+  .event_area .event_more {
+    position: absolute;
+    bottom: 110px;
+    left: 50%;
+    width: 300px;
+    height: 60px;
+    margin-left: -150px;
+    border-radius: 10px;
+    font-size: 18px;
+    line-height: 60px;
+    color: #fff;
+    background-color: #333;
+  }
+  .event_area .event_more:hover {
+    border: 3px solid #171717;
+    background-color: #fff;
+    color: #171717;
+    font-weight: 700;
+  }
+  .event_area .event_more:focus {
+    border: 3px solid #171717;
+    background-color: #fff;
+    color: #171717;
+    font-weight: 700;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1279px) {
+  #eventBox {
+    width: 100%;
+    height: auto;
+    margin-top: 150px;
+  }
+  #eventBox .event_total_title {
+    width: 200px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  #eventBox .event_total_title h2 {
+    width: 100%;
+    height: 100%;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 100px;
+    text-transform: uppercase;
+  }
+  .event_area {
+    position: relative;
+    width: 93.75vw;
+    height: auto;
+    min-height: 1300px;
+    margin: auto;
+    padding: 30px 0;
+  }
+  .event_area .event_tab {
+    width: 84.375vw;
+    max-width: 1200px;
+    height: 40px;
+    margin: 0 auto;
+    padding: 0;
+    border-bottom: 1px solid #333;
+  }
+  .event_area .event_tab li {
+    float: left;
+    margin: 3px 20px 20px 0;
+    padding: 0 10px;
+    padding-bottom: 11px;
+  }
+  .event_area .event_tab li.on {
+    border-bottom: 3px solid #171717;
+  }
+  .event_area .event_tab li.on button {
+    font-weight: 700;
+  }
+  .tab_content {
+    width: 84.735vw;
+    height: auto;
+    min-height: 820px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 200px;
+  }
+  .tab_content .event_ing_wrap {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+  }
+  .event {
+    position: relative;
+    width: 300px;
+    height: 380px;
+    margin-right: 10vw;
+    margin-bottom: 60px;
+  }
+  .event:nth-child(2n) {
+    margin-right: 0;
+  }
+  .event .event_img {
+    width: 100%;
+    height: 300px;
+    background-color: #eee;
+  }
+  .event .event_title {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+  }
+  .event .event_date {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+  }
+  .event .event_hover {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    text-align: center;
+    line-height: 380px;
+    color: #fff;
+    text-decoration: underline;
+    font-size: 22px;
+  }
+  .event:hover .event_hover {
+    display: block;
+  }
+  .event > a:focus .event_hover {
+    display: block;
+    border: 2px solid #171717;
+  }
+
+  .event_area .event_more {
+    position: absolute;
+    bottom: 110px;
+    left: 50%;
+    width: 300px;
+    height: 60px;
+    margin-left: -150px;
+    border-radius: 10px;
+    font-size: 18px;
+    line-height: 60px;
+    color: #fff;
+    background-color: #333;
+  }
+  .event_area .event_more:hover {
+    border: 3px solid #171717;
+    background-color: #fff;
+    color: #171717;
+    font-weight: 700;
+  }
+  .event_area .event_more:focus {
+    border: 3px solid #171717;
+    background-color: #fff;
+    color: #171717;
+    font-weight: 700;
+  }
+}
+@media all and (min-width: 1280px) {
+  #eventBox {
+    width: 100%;
+    height: auto;
+    margin-top: 150px;
+  }
+  #eventBox .event_total_title {
+    width: 100%;
+    max-width: 1200px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  #eventBox .event_total_title h2 {
+    font-size: 36px;
+    font-weight: 700;
+    text-align: left;
+    line-height: 100px;
+    text-transform: uppercase;
+  }
+  .event_area {
+    position: relative;
+    width: 93.75vw;
+    height: auto;
+    min-height: 1100px;
+    margin: auto;
+    padding: 30px 60px;
+  }
+  .event_area .event_tab {
+    width: 84.375vw;
+    max-width: 1200px;
+    height: 40px;
+    margin: 0 auto;
+    padding: 0;
+    border-bottom: 1px solid #333;
+  }
+  .event_area .event_tab li {
+    float: left;
+    margin: 3px 20px 20px 0;
+    padding: 0 10px;
+    padding-bottom: 11px;
+  }
+  .event_area .event_tab li.on {
+    border-bottom: 3px solid #171717;
+  }
+  .event_area .event_tab li.on button {
+    font-weight: 700;
+  }
+  .tab_content {
+    width: 84.375vw;
+    max-width: 1200px;
+    height: auto;
+    min-height: 820px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 200px;
+  }
+  .tab_content .event_ing_wrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+  }
+  .event {
+    position: relative;
+    width: 300px;
+    height: 380px;
+    margin-right: 90px;
+    margin-bottom: 60px;
+  }
+  .event:nth-child(3n) {
+    margin-right: 0;
+  }
+  .event .event_img {
+    width: 100%;
+    height: 300px;
+    background-color: #eee;
+  }
+  .event .event_title {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+  }
+  .event .event_date {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+  }
+  .event .event_hover {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    text-align: center;
+    line-height: 380px;
+    color: #fff;
+    text-decoration: underline;
+    font-size: 22px;
+  }
+  .event:hover .event_hover {
+    display: block;
+  }
+  .event > a:focus .event_hover {
+    display: block;
+    border: 2px solid #171717;
+  }
+
+  .event_area .event_more {
+    position: absolute;
+    bottom: 110px;
+    left: 50%;
+    width: 300px;
+    height: 60px;
+    margin-left: -150px;
+    border-radius: 10px;
+    font-size: 18px;
+    line-height: 60px;
+    color: #fff;
+    background-color: #333;
+  }
+  .event_area .event_more:hover {
+    border: 3px solid #171717;
+    background-color: #fff;
+    color: #171717;
+    font-weight: 700;
+  }
+  .event_area .event_more:focus {
+    border: 3px solid #171717;
+    background-color: #fff;
+    color: #171717;
+    font-weight: 700;
+  }
 }
 
 /*# sourceMappingURL=event_v2.css.map */
