--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -9,7 +9,8 @@
 
 .title_text {
   float: left;
-  width: 500px;
+  width: 65vw;
+  max-width: 500px;
   height: 60px;
 }
 
@@ -24,7 +25,8 @@
 }
 
 .sub_title {
-  width: 450px;
+  width: 65vw;
+  max-width: 500px;
   height: 20px;
   font-size: 16px;
   font-weight: 400;
@@ -102,8 +104,10 @@ html, body {
   }
 
   h1 {
+    min-width: 100px;
     width: 22.1vw;
     max-width: 170px;
+    min-height: 20px;
     height: 5.2vw;
     max-height: 40px;
   }
@@ -134,20 +138,25 @@ html, body {
     display: block;
     display: flex;
     justify-content: space-between;
+    min-width: 150px;
     width: 30vw;
     max-width: 230px;
     height: auto;
   }
   #hand_nav button {
+    min-width: 25px;
     width: 5.2vw;
     max-width: 40px;
+    min-height: 25px;
     height: 5.2vw;
     max-height: 40px;
   }
   .hand_language {
     position: relative;
+    min-width: 25px;
     width: 5.2vw;
     max-width: 40px;
+    min-height: 25px;
     height: 5.2vw;
     max-height: 40px;
     cursor: pointer;
@@ -455,7 +464,7 @@ html, body {
   #footBox {
     width: 100%;
     height: 400px;
-    padding: 70px 60px;
+    padding: 7.8125vw;
     background-color: #1c1c1c;
   }
 
@@ -486,8 +495,9 @@ html, body {
   .foot_top_area .foot_top_btn {
     display: flex;
     justify-content: space-between;
-    width: 300px;
-    height: 30px;
+    max-width: 300px;
+    height: auto;
+    max-height: 30px;
     margin: auto;
     font-size: 16px;
     text-align: left;
@@ -676,8 +686,8 @@ html, body {
   }
   .foot_main_area .foot_main_btn li {
     position: relative;
-    margin-right: 10px;
-    padding-right: 15px;
+    margin-right: 0px;
+    padding-right: 30px;
   }
   .foot_main_area .foot_main_btn li:last-child {
     margin-right: 0;
@@ -687,7 +697,7 @@ html, body {
     content: "";
     display: block;
     position: absolute;
-    top: 50%;
+    top: calc(50% - 5px);
     right: 0;
     width: 3px;
     height: 3px;
@@ -949,14 +959,14 @@ html, body {
     width: 100%;
     height: 480px;
     margin-top: 20px;
-    padding: 80px;
+    padding: 10vw;
   }
   .best_area {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
     width: auto;
-    height: 420px;
+    height: auto;
     margin: auto;
     margin-top: 40px;
   }
@@ -1061,8 +1071,12 @@ html, body {
   font-size: 20px;
 }
 .benefit_detail_area .benefit .benefit_img {
-  width: 75px;
-  height: 75px;
+  min-width: 40px;
+  width: 10vw;
+  max-width: 75px;
+  min-height: 40px;
+  height: 10vw;
+  max-height: 75px;
   margin: auto;
   margin-bottom: 20px;
   background-color: #E17900;
@@ -1130,10 +1144,12 @@ html, body {
 
   .benefit_detail_area {
     width: 100%;
-    height: 170px;
+    height: auto;
   }
   .benefit_detail_area .benefit {
-    width: 450px;
+    min-width: 340px;
+    width: 58.6vw;
+    max-width: 380px;
     height: 100px;
   }
   .benefit_detail_area .benefit .benefit_img {
@@ -1188,8 +1204,8 @@ html, body {
     float: left;
     width: auto;
     height: auto;
-    margin-top: 10px;
     margin-left: 30px;
+    line-height: 30px;
   }
 }
 @media all and (min-width: 1280px) {
@@ -1215,7 +1231,7 @@ html, body {
   width: 100%;
   height: auto;
   margin-top: 20px;
-  padding: 80px;
+  padding: 10vw;
 }
 #challengeBox .challenge_area {
   display: flex;
