--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -9,7 +9,8 @@
 @media all and (max-width: 1279px){
   #footBox {
     width: 100%; height: 400px;
-    padding: 70px 60px;
+    // padding: 60px;
+    padding: 7.8125vw;
     background-color: #1c1c1c;
   } // #footBox
 
@@ -26,7 +27,7 @@
 
     .foot_top_btn {
       display: flex; justify-content: space-between;
-      width: 300px; height: 30px;
+      max-width: 300px; height: auto; max-height: 30px;
       margin: auto;
       font-size: 16px;
       text-align: left; color: #ddd;
@@ -139,11 +140,11 @@
         font-size: 16px;
         text-align: left; color: #ddd;
 
-        li { position: relative; margin-right: 10px; padding-right: 15px; }
+        li { position: relative; margin-right: 0px; padding-right: 30px; }
         li:last-child {margin-right: 0; padding-right: 0;}
         li::after {
           content: ""; display: block;
-          position: absolute; top: 50%; right: 0;
+          position: absolute; top: calc(50% - 5px); right: 0;
           width: 3px; height: 3px;
           background-color: #ddd;
         }
