--- a/study_code/a_project/scss/src/main/_main_benefitBox_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_benefitBox_handhelds.scss
@@ -12,10 +12,10 @@
     } // .benefit_title_area
 
     @at-root .benefit_detail_area {
-      width: 100%; height: 170px;
+      width: 100%; height: auto;
 
       .benefit {
-        width: 450px; height: 100px;
+        min-width: 340px; width: 58.6vw; max-width: 380px; height: 100px;
 
         .benefit_img {
           float: left;
@@ -27,8 +27,9 @@
         .benefit_text { 
           float: left; 
           width: auto; height: auto;
-          margin-top: 10px; 
+          // margin-top: 10px; 
           margin-left: 30px;
+          line-height: 30px;
         }
       } // .benefit
     } // .benefit_detail_area
