--- a/study_code/a_project/scss/src/main/_main_bestBox_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_bestBox_handhelds.scss
@@ -6,11 +6,11 @@
     overflow: hidden;
     width: 100%; height: 480px;
     margin-top: 20px;
-    padding: 80px;
+    padding: 10vw;
 
     @at-root .best_area {
       display: flex; justify-content: space-between; flex-wrap: nowrap;
-      width: auto; height: 420px;
+      width: auto; height: auto;
       margin: auto; margin-top: 40px;
 
       .best_item {
