--- a/study_code/a_project/scss/src/main/_main_challengeBox.scss
+++ b/study_code/a_project/scss/src/main/_main_challengeBox.scss
@@ -3,7 +3,7 @@
 #challengeBox {
   width: 100%; height: auto;
   margin-top: 20px;
-  padding: 80px;
+  padding: 10vw;
 
   .challenge_area {
     display: flex; justify-content: space-around;
